# q2go

./: .gitignore  CMakeLists.txt  README.md  release.bat
3party/: 3party_download.bat  3party_download.sh  zlib_build.bat  zlib_build.sh
include/: mainwindow.h  q2dialog.h  q2net.h
release/: ._deploy.bat
resources/: resources.qrc  resources.rc
src/: main.cpp  mainwindow.cpp  q2dialog.cpp  q2net.cpp
ui/: mainwindow.ui
